@@ -8,6 +8,10 @@ Changes - Apache::Test change logfile
 
 =item 1.08_dev
 
+handle "Include conf/*conf" cases when inheriting httpd.conf in a
+cleaner way, don't complain that "*conf" doesn't exist, since it's a
+glob pattern. Instead check try to resolve the base directory. [Stas]
+
 import the Apache::TestMM clean target in Makefile.PL so 'make clean'
 will call t/TEST -clean [Stas]
 
